--- a/01-Introduccion/index.html
+++ b/01-Introduccion/index.html
@@ -15,9 +15,6 @@
         <p class="hashtag">#JSModernoConJuan</p>
     </div>
 
-    <script>
-        /* script dentro de index.html */
-        alert('hola mundo!');
-    </script>
+    <script src="js/app.js"></script>
 </body>
 </html>
