--- a/26-PROYECTO-AdministrarCitas/index.html
+++ b/26-PROYECTO-AdministrarCitas/index.html
@@ -28,9 +28,9 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-4 col-lg-4 col-form-label">Teléfono:</label>
+                        <label class="col-sm-4 col-lg-4 col-form-label">Email:</label>
                         <div class="col-sm-8 col-lg-8">
-                            <input type="tel" id="telefono" name="telefono" class="form-control"  placeholder="Número de Teléfono">
+                            <input type="email" id="email" name="email" class="form-control"  placeholder="Correo electrónico">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -39,14 +39,14 @@
                             <input type="date" id="fecha" name="fecha" class="form-control">
                         </div>
                     </div>
-
+<!-- 
                     <div class="form-group row">
                         <label class="col-sm-4 col-lg-4 col-form-label">Hora:</label>
                         <div class="col-sm-8 col-lg-8">
                             <input type="time" id="hora" name="hora" class="form-control">
                         </div>
                     </div>
-
+ -->
                     <div class="form-group row">
                         <label class="col-sm-4 col-lg-4 col-form-label">Sintomas:</label>
                         <div class="col-sm-8 col-lg-8">
